fix(backend): aplica regras de tenant e invariantes de negócio